<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inicio_op"
            android:icon="@drawable/ic_fluent_home_24_regular"
            android:title="@string/inicio"
            app:cnb_backgroundColor="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_observacion_op"
            android:icon="@drawable/ic_fluent_clipboard_checkmark_24_regular"
            android:title="@string/Observación_op"
            app:cnb_backgroundColor="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_trabajadores_op"
            android:icon="@drawable/ic_fluent_notepad_person_24_regular"
            android:title="@string/trabajadores_op"
            app:cnb_backgroundColor="@color/colorPrimary"/>

        <item
            android:id="@+id/nav_usuario_op"
            android:icon="@drawable/ic_fluent_person_24_regular"
            android:title="@string/usuario"
            app:cnb_backgroundColor="@color/colorPrimary"/>


    </group>

    <!---<item android:title="Agregar Datos" >
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/navnlote"
                    android:enabled="true"
                    android:icon="@drawable/ic_fluent_tag_24_regular"
                    android:title="lote" />

                <item
                    android:id="@+id/navproductos"
                    android:enabled="true"
                    android:icon="@drawable/ic_fluent_production_24_regular"
                    android:title="producto" />

                <item
                    android:id="@+id/navclientes"
                    android:enabled="true"
                    android:icon="@drawable/ic_fluent_person_24_regular"
                    android:title="cliente" />
            </group>
        </menu>

    </item>

    <item android:title="Configuración" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/CerrarSesion"
                    android:icon="@drawable/ic_fluent_power_24_regular"
                    android:title="Cerrar Sesión" />
            </group>
        </menu>
    </item>  -->

</menu>