<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorWhiteContenido"
    tools:context=".OperadorResponsable.FragmentPanelBatch">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/appBarLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/san_francisco"
                    android:text="@string/cantidad_de_batch"
                    android:textColor="#262F3A"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/txtBatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/tvID"
                    android:layout_toRightOf="@+id/tvID"
                    android:fontFamily="@font/san_francisco"
                    android:text="8"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:id="@+id/Lote1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvID"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/san_francisco"
                    android:text="Lote:  "

                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txvnumerlote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvID"
                    android:layout_gravity="left"
                    android:layout_marginStart="-2dp"
                    android:layout_marginLeft="-2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/Lote1"
                    android:layout_toRightOf="@+id/Lote1"
                    android:fontFamily="@font/san_francisco"
                    android:text="0001-2022 "
                    android:textSize="15sp"
                    android:textStyle="normal" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    style="?attr/materialCardViewFilledStyle"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="#FFFFFF"
                    android:orientation="horizontal"
                    tools:ignore="Orientation">

                    <TextView
                        android:id="@+id/edtCantBatchDesgomado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:gravity="center"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/edtCantBatchNeutralizado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="0"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:visibility="gone"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/edtCantBatchBlanqueado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="0"
                        android:gravity="center"
                        android:visibility="gone"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:backgroundTint="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabTextColor="#717780"
            app:tabSelectedTextColor="#262F3A">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Desgomado" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Neutralizado" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Blanqueado" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.viewpager2.widget.ViewPager2
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/view_page2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>